# KanaeGameEngine

./: CMakeLists.txt  LICENSE  Matengine.cpp  README.md  imgui.ini
.cache/clangd/index/: GraphicsDevice.cpp.37366127A31A97A5.idx  GraphicsDevice.h.1790A87307B65430.idx  ImGuiFileDialog.cpp.8BB044942A6807C7.idx  ImGuiFileDialog.h.19ED77CF46F0A59F.idx  ImGuiFileDialogConfig.h.D9F5A554E7F47127.idx  Launcher.cpp.6AEF8A081BBB7FAD.idx  Launcher.h.7891EB7F75A55A5A.idx  Main.cpp.6C2014E8937FD77D.idx  Matengine.cpp.2300DC553FC366C1.idx  ShaderLoader.cpp.D085354768B2E15B.idx  ShaderLoader.h.5E53CA6F4E706A6C.idx  VulkanContext.cpp.8703123B81710168.idx  VulkanContext.h.1A1AE286FFB54F0B.idx  _fixes.hpp.5CF898B226EB4966.idx  _vectorize.hpp.D453B2A55DAFC9C7.idx  common.hpp.9C34CE2EDE2275D1.idx  compute_common.hpp.D02FBE9A04F6467C.idx  compute_vector_relational.hpp.D82726355F7CE95F.idx  constants.hpp.6EBDC402177BA097.idx  constants.inl.7BEF82B99D09E7C4.idx  exponential.hpp.FEA346BF20D08E6A.idx  func_common.inl.A6181E0C5188B24B.idx  func_exponential.inl.28820BF5BB0A7040.idx  func_geometric.inl.8B7F9E76179F33DC.idx  func_integer.inl.B17A421BF440F5F9.idx  func_matrix.inl.5D0F973CD6464C34.idx  func_packing.inl.C8DBCB08A99F42D6.idx  func_trigonometric.inl.6F864F2BC40C453F.idx  func_vector_relational.inl.65E38C1F3C09E022.idx  fwd.hpp.66D13CE23E988643.idx  geometric.hpp.09F57BEA6645A9CF.idx  glm.hpp.65E5374B3E0FF241.idx  imconfig.h.C1710B336E44727B.idx  imgui.cpp.5D22F6591FB96A6F.idx  imgui.h.B193D7AFCFBDC741.idx  imgui_demo.cpp.B3C951337A59288C.idx  imgui_draw.cpp.33A45EEF9B663E1E.idx  imgui_impl_glfw.cpp.061920C2FDAC6B86.idx  imgui_impl_glfw.h.2EC23E3DD683E38C.idx  imgui_impl_vulkan.cpp.65B0AC41EE6B7245.idx  (+134 more)
CoreEngine/: Engine.cpp  Engine.h
CoreEngine/Graphics/: DxSp.cpp  GraphicsDevice.h  IndexBuffer.h  Main.cpp  Material.h  Mesh.h  Shader.h  Shader.hlsl  ShaderLoader.h  Texture.h  VertexBuffer.h  VulkanContext.cpp  VulkanContext.h  rendering.cpp
CoreEngine/Launcher/: Launcher.cpp  Launcher.h  VulkanContext.cpp  VulkanContext.h  main.cpp
CoreEngine/Math/: Transform.h
CoreEngine/Renderer/: Renderer.h
CoreEngine/Resource/: ResourceManager.h
CoreEngine/Scene/: Entity.h  Scene.cpp  Scene.h
CoreEngine/Scene/Components/: CameraComponent.h  Component.h  LightComponent.h  MeshComponent.h  ReflectionProbeComponent.h  Transform.h
CoreEngine/UI/: EditorUI.h
Examples/: CMakeLists.txt
Examples/BasicScene/: CMakeLists.txt  main.cpp
KanaeEngine0.5/CoreEngine/Graphics/: GraphicsDevice.cpp  Main.cpp  ShadersMan.cpp  pixel_shader.hlsl  vertex_shader.hlsl
